implemented map fragment with api key

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ProgForceTask</string>
+    <string name="api_key">AIzaSyDAvBurJ5ALd0V0QP1Ktf7jGcP0x9GRolU</string>
 </resources>
